--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,8 +7,7 @@ galaxy_info:
   platforms:
   - name: Ubuntu
     versions:
-    - 16.04
-    - 16.10
+    - Xenial
   galaxy_tags:
     - certbot
     - nginx
